# dream-78

./: .gitignore  Cargo.toml  suz.gltf
assets/: suzanne_scene.ron
assets/mesh/: suzanne.glb  suzanne.gltf
resources/: display_config.ron
src/: main.rs  prefab.rs  state.rs
