[package]
name = "dream78"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
log = "0.4.6"
serde = "1.0.90"

[dependencies.amethyst]
version = "0.12.*"
default-features = false
features = ["animation", "gltf"]

[features]
default = ["vulkan"]
vulkan = ["amethyst/vulkan"]
metal = ["amethyst/metal"]